# GPULife

./: LICENSE.txt  README.md
CUDA+ACC/: applyRules_OpenAcc.c  build.sh  loadTile_CUDA.cu  main.c
OpenCl_GLtest/: CMakeLists.txt  Makefile  applyRules_OpenCL.c  build.sh  main.c
testing/: CMakeLists.txt  Makefile  applyRules_CUDA.cu  applyRules_OpenAcc.c  applyRules_OpenMP4.c  build.sh  cmake_install.cmake  loadTile_CUDA.cu  main.c
testing/cmake/Modules/: CheckCSourceCompiles.cmake  FindOpenMP4.cmake
